force-app/main/default/objects/PaymentTermMaster__c/PaymentTermMaster__c.object-meta.xml
<CustomObject>
    <description>The standard terms and conditions for payments, including due dates, type, no. of installment and payment structure.</description>
    <label>Payment Term Master</label>
    <nameField>
        <label>Payment Term Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Term Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>