force-app/main/default/objects/PaymentTermMaster__c/fields/ActiveFrom__c.field-meta.xml
<CustomField>
    <fullName>ActiveFrom__c</fullName>
    <description>Displays the start date of the Payment Term Master, indicating when the payment terms become effective.</description>
    <label>Active From</label>
    <type>Date</type>
</CustomField>