force-app/main/default/objects/PaymentTermMaster__c/fields/ActiveTo__c.field-meta.xml
<CustomField>
    <fullName>ActiveTo__c</fullName>
    <description>Displays the end date of the Payment Term Master, indicating when the payment terms expire or are no longer valid.</description>
    <label>Active To</label>
    <type>Date</type>
</CustomField>