force-app/main/default/objects/PaymentTermMaster__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <inlineHelpText>Date for collecting payments (installment)</inlineHelpText>
    <label>Due Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>