force-app/main/default/objects/PaymentTermMaster__c/fields/InstallmentPercent__c.field-meta.xml
<CustomField>
    <fullName>InstallmentPercent__c</fullName>
    <label>Installment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>