force-app/main/default/objects/PaymentTermMaster__c/fields/NoofInstallment__c.field-meta.xml
<CustomField>
    <fullName>NoofInstallment__c</fullName>
    <label>No. of Installment</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>