force-app/main/default/objects/PaymentTermMaster__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Payment Term Masters</relationshipLabel>
    <relationshipName>Payment_Term_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>