force-app/main/default/objects/PaymentTermMaster__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
    TODAY() &gt;=  ActiveFrom__c &amp;&amp; TODAY() &lt;=  ActiveTo__c , 
    &quot;Active&quot;, 
    &quot;Inactive&quot;
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>