force-app/main/default/objects/PaymentTermMaster__c/fields/TransferPercent__c.field-meta.xml
<CustomField>
    <fullName>TransferPercent__c</fullName>
    <formula>(100 - ((BLANKVALUE(ContractPercent__c, 0) * 100) + (BLANKVALUE(InstallmentPercent__c, 0) * 100)))/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transfer Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>