force-app/main/default/objects/PaymentTermMaster__c/validationRules/ActiveDatesValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveDatesValidation</fullName>
    <active>true</active>
    <description>To ensure Active From is less than Active To and Active To is not less than Active From</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( ActiveFrom__c )),
    NOT(ISBLANK( ActiveTo__c )),
    ActiveFrom__c &gt; ActiveTo__c 
)</errorConditionFormula>
    <errorDisplayField>ActiveTo__c</errorDisplayField>
    <errorMessage>Active From must be less than Active To.</errorMessage>
</ValidationRule>