force-app/main/default/objects/PaymentTermMaster__c/validationRules/Check_Installment_of_Bullet.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Installment_of_Bullet</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Type__c  ,&quot;Bullet&quot;),
 NoofInstallment__c &gt;0
)</errorConditionFormula>
    <errorDisplayField>NoofInstallment__c</errorDisplayField>
    <errorMessage>Please remove No. of installment for Type is &quot;bullet&quot;.</errorMessage>
</ValidationRule>