force-app/main/default/objects/PaymentTermMaster__c/validationRules/DueDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DueDateValidation</fullName>
    <active>true</active>
    <description>To ensure Due Date is not 0 and does not exceed 31.</description>
    <errorConditionFormula>OR(
     DueDate__c = 0,
    DueDate__c &gt; 31
)</errorConditionFormula>
    <errorDisplayField>DueDate__c</errorDisplayField>
    <errorMessage>Due Date must be between 1 and 31.</errorMessage>
</ValidationRule>