force-app/main/default/objects/PaymentTermMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>ActiveFrom__c</columns>
    <columns>ActiveTo__c</columns>
    <columns>Quota__c</columns>
    <columns>NoofInstallment__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>